# src/entities/test.ts
@@ -1,0 +1,8 @@
+export interface Test {
+    id: number;
+    name: string;
+}
+
+export interface TestCreationRequest {
+    name: string;
+}
